rework versions and version predicates